# isart-resource-sdl

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  game.c  game.h  main.c  sdl_close.c  sdl_close.h  sdl_display.c  sdl_display.h  sdl_image.c  sdl_image.h  sdl_init.c  sdl_init.h  sdl_player.c  sdl_player.h  sdl_struct.h
